fixed horizontal scroll

--- a/contact-us.css
+++ b/contact-us.css
@@ -1,5 +1,9 @@
+.contact-us {
+    padding: 20px;
+}
+
 .contact-us__header {
-    margin: 160px 76px 75px;
+    margin: 140px 0 75px;
 }
 
 .contact-us__title {
@@ -16,24 +20,30 @@
     line-height: 40px;
 }
 
-/* .social-media {
+ .contact-us__social-media {
     display: flex;
     justify-content: space-between;
-    padding: 0 128px 92px;
-} */
+    padding: 0 0 0px;
+} 
+.contact-us__social-media img {
+    max-width: 34px;
+}
 
 .contact__us-data {
-    padding: 0px 0px 78px 35px;
+    padding: 0px;
 }
 
 .contact-us__data-block {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    padding: 0 44px 25px 34px;
+}
+
+.contact-us__data-block img {
+    max-width: 25px;
 }
 
 .block-content {
-    padding-left: 20px;
     line-height: 23px;
     text-align: left;
 }
@@ -42,9 +52,8 @@
     border: 1px solid #DDDDDD;
     border-radius: 20px;
     box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
-    padding: 52px 49px;
-    width: 378px;
-    height: 669px;
+    padding: 52px 0;
+    max-width: 378px;
 }
 
 .form-title {
@@ -63,16 +72,15 @@
     border-radius: 39px;
     border-color: #F4F4F4;
     border: 1px solid #E8E8E8;
-    width: 280px;
+    max-width: 280px;
     height: 54px;
-    padding-left: 20px;
 }
 
 .user-message {
     background-color: #F4F4F4;
     border-color: #F4F4F4;
     border: 1px solid #E8E8E8;
-    width: 280px;
+    max-width: 280px;
     height: 193px;
     padding: 23px 0 0 20px;
 }
@@ -88,5 +96,5 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 20px;
-    margin-right: 184px;
+
 }
